--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,7 @@
 @import "base/variables";
 @import "components/navigation";
+@import "components/clock";
+@import "components/controls";
+@import "components/page-title";
+@import "components/pomodoro-form";
+@import "components/body";
