Improved UI, changed sound scheme, added progressively filling background for countdown

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -7,6 +7,8 @@ $grey: #333333;
 // Navigation colors
 $nav-background: $grey;
 $nav-text-color: white;
+$nav-link-color:   #00BFFF; // #1779A2;
+
 
 // Clock variables
 $clock-text-color: white;
