--- a/app/styles/components/_body.scss
+++ b/app/styles/components/_body.scss
@@ -1,3 +1,3 @@
 body {
-  background-image: url("https://www.transparenttextures.com/patterns/crissxcross.png");
+  background-image: url("/img/crissxcross.png");
 }
